# droidian-settings

./: meson.build
data/: meson.build  org.droidian.Settings.appdata.xml.in  org.droidian.Settings.desktop.in  org.droidian.Settings.gschema.xml
data/icons/: meson.build
debian/: control  copyright
po/: POTFILES  meson.build
src/: droidian_settings.gresource.xml  encryption_page.vala  encryption_service.vala  main.vala  meson.build  window.ui  window.vala
src/ui/: encryption_page.blp  encryption_passphrase.blp  meson.build  settings.blp
